--- a/microps/unittest/CMakeLists.txt
+++ b/microps/unittest/CMakeLists.txt
@@ -11,13 +11,15 @@ add_library(source
     ../driver/dummy.c
     ../net.c
     ../util.c
+    ../platform/linux/intr.c
 )
 
 add_executable(test_dummy test_dummy.cpp)
 add_executable(test_net test_net.cpp)
 add_executable(test_util test_util.cpp)
+add_executable(test_intr test_intr.cpp)
 
-foreach(target test_dummy test_net test_util)
+foreach(target test_dummy test_net test_util test_intr)
     target_link_libraries(${target} ${GTEST_BOTH_LIBRARIES} pthread source)
     target_include_directories(${target} PUBLIC ${GTEST_INCLUDE_DIRS})
 endforeach()
