--- a/microps/unittest/CMakeLists.txt
+++ b/microps/unittest/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
 
 add_library(source
     ../driver/dummy.c
+    ../driver/loopback.c
     ../net.c
     ../util.c
     ../platform/linux/intr.c
@@ -18,8 +19,9 @@ add_executable(test_dummy test_dummy.cpp)
 add_executable(test_net test_net.cpp)
 add_executable(test_util test_util.cpp)
 add_executable(test_intr test_intr.cpp)
+add_executable(test_loopback test_loopback.cpp)
 
-foreach(target test_dummy test_net test_util test_intr)
+foreach(target test_dummy test_net test_util test_intr test_loopback)
     target_link_libraries(${target} ${GTEST_BOTH_LIBRARIES} pthread source)
     target_include_directories(${target} PUBLIC ${GTEST_INCLUDE_DIRS})
 endforeach()
