--- a/microps/unittest/CMakeLists.txt
+++ b/microps/unittest/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(source
     ../driver/loopback.c
     ../net.c
     ../util.c
+    ../ip.c
     ../platform/linux/intr.c
 )
 
@@ -20,8 +21,9 @@ add_executable(test_net test_net.cpp)
 add_executable(test_util test_util.cpp)
 add_executable(test_intr test_intr.cpp)
 add_executable(test_loopback test_loopback.cpp)
+add_executable(test_ip test_ip.cpp)
 
-foreach(target test_dummy test_net test_util test_intr test_loopback)
+foreach(target test_dummy test_net test_util test_intr test_loopback test_ip)
     target_link_libraries(${target} ${GTEST_BOTH_LIBRARIES} pthread source)
     target_include_directories(${target} PUBLIC ${GTEST_INCLUDE_DIRS})
 endforeach()
