--- a/microps/unittest/CMakeLists.txt
+++ b/microps/unittest/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(source
     ../net.c
     ../util.c
     ../ip.c
+    ../icmp.c
     ../platform/linux/intr.c
 )
 
@@ -22,8 +23,9 @@ add_executable(test_util test_util.cpp)
 add_executable(test_intr test_intr.cpp)
 add_executable(test_loopback test_loopback.cpp)
 add_executable(test_ip test_ip.cpp)
+add_executable(test_icmp test_icmp.cpp)
 
-foreach(target test_dummy test_net test_util test_intr test_loopback test_ip)
+foreach(target test_dummy test_net test_util test_intr test_loopback test_ip test_icmp)
     target_link_libraries(${target} ${GTEST_BOTH_LIBRARIES} pthread source)
     target_include_directories(${target} PUBLIC ${GTEST_INCLUDE_DIRS})
 endforeach()
