--- a/microps/unittest/CMakeLists.txt
+++ b/microps/unittest/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(source
     ../util.c
     ../ip.c
     ../icmp.c
+    ../ether.c
     ../platform/linux/intr.c
 )
 
@@ -24,8 +25,9 @@ add_executable(test_intr test_intr.cpp)
 add_executable(test_loopback test_loopback.cpp)
 add_executable(test_ip test_ip.cpp)
 add_executable(test_icmp test_icmp.cpp)
+add_executable(test_ether test_ether.cpp)
 
-foreach(target test_dummy test_net test_util test_intr test_loopback test_ip test_icmp)
+foreach(target test_dummy test_net test_util test_intr test_loopback test_ip test_icmp test_ether)
     target_link_libraries(${target} ${GTEST_BOTH_LIBRARIES} pthread source)
     target_include_directories(${target} PUBLIC ${GTEST_INCLUDE_DIRS})
 endforeach()
